@@ -1,1 +1,1 @@
-0.7.0-RC1
+0.7.0-RC2
