@@ -1,3 +1,22 @@
+/*
+#########################################################################
+# (C) ZE CMS, Humboldt-Universitaet zu Berlin
+# Written 2010-2011 by Daniel Rohde <d.rohde@cms.hu-berlin.de>
+#########################################################################
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
 input,select { text-shadow: 1px 1px white;  }
 .header, .signature { border: 2px outset black; padding-left:3px;background-color:#eeeeee; margin: 2px 0px 2px 0px; }
 .signature a { color: black; text-decoration: none; }
